Auth: twitter user authentication implemented

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ r2d2_sqlite = "*"
 nickel = "*"
 mustache = "*"
 rustc-serialize = "*"
-twitter-api = "*"
 oauth-client = "*"
 toml = "*"
 nickel_cookies = "*"
 cookie = "*"
+egg-mode = "0.7.0"
